syntax = "proto3";
package user;
option go_package = "user-service/proto/user";

message GetUserByUUIDRequest {
  string user_uuid = 1;
}

message ValidateUserRequest {
  string user_uuid = 1;
}

message GetUsersByUUIDsRequest {
  repeated string user_uuids = 1;
}

message GetUserByUUIDResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
}

message ValidateUserResponse {
  bool success = 1;
  string message = 2;
  bool exists = 3;
}

message GetUsersByUUIDsResponse {
  bool success = 1;
  string message = 2;
  repeated UserInfo users = 3;
}

message UserInfo {
  string user_uuid = 1;
  uint64 user_id = 2;
  string account = 3;
  string email = 4;
  string nickname = 5;
  string avatar_url = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

service UserService {
  rpc GetUserByUUID(GetUserByUUIDRequest) returns (GetUserByUUIDResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
  rpc GetUsersByUUIDs(GetUsersByUUIDsRequest) returns (GetUsersByUUIDsResponse);
}
